# http-template-engine

./: CMakeLists.txt  README.md
html/: index.html
include/: html_serve.h  request_handler.h  server.h  socket_utils.h  template.h  template_utils.h
src/: html_serve.c  request_handler.c  server.c  socket_utils.c  template.c  template_utils.c
